<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Study Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_activity1">Activity Life Cycle</string>
    <string name="title_activity_my_activity2">Gesture Detector || Intent</string>
    <string name="Third_lesson_activity_title">List View|| Custom Item and Res</string>
    <string name="button_1_text">Start Second Activity</string>
    <string name="button_2_text">Start Activity from Third Lesson</string>

    <string name="item_string_name">Name:</string>
    <string name="item_string_second_name">Second Name:</string>
    <string name="name">Name</string>
    <string name="sname">Second name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="tellnumber">Tellephone number</string>
    <string name="button_detail">Detail</string>

    <string name="hint_email">Enter the email!</string>
    <string name="hint_age">Enter the age!</string>
    <string name="hint_tellnumber">Enter the tellnumber!</string>
    <string name="student_activity_name">Information</string>


</resources>
