<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:id="@+id/first_coloumn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:padding="4dp">

        <TextView
            android:id="@+id/first_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_string_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_name_text_view"
            android:text="@string/item_string_second_name"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/third_column"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="4dp">

        <Button
            android:id="@+id/btn_in_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:typeface="serif"
            android:background="@drawable/button_shape_shadow"
            android:textColor="@drawable/text"
            android:textSize="10dp"
            android:text="@string/button_detail"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/first_coloumn"
        android:layout_toStartOf="@id/third_column"
        android:layout_marginLeft="40dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <TextView
            android:id="@+id/first_name_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="super"/>

        <TextView
            android:id="@+id/second_name_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_name_indicator"
            android:text="super"/>

    </RelativeLayout>
</RelativeLayout>